[workspace]
resolver = "2"
members = [
    # Data
    # "data/re-wz"

    # client
    "client/shroom_launchar",

    # server
    #"server/shrooming",
    "server/login",
    "server/game",
    "server/mono",


    "crates/proto95",
    "crates/meta",
    "crates/data",
    "crates/data/migration",
]
exclude = ["client/shroom_hook","client/shroom_ffi"]

# Shroom crates for now
[patch.crates-io]
shroom-net = { git = "https://github.com/OpenRustMS/net.git", branch = "jz/tick_feature" }
shroom-pkt = { git = "https://github.com/OpenRustMS/net.git", branch = "jz/tick_feature" }
