[workspace]
resolver = "2"
members = [
    # Data
    # "data/re-wz"

    # client
    "client/shroom_launchar",

    # server
    #"server/shrooming",


    "crates/proto95",
    "crates/meta",
    "crates/mono",
    "crates/plugins",
    "crates/data/migration",
    #"crates/game",
    "crates/login",
    "crates/data",
]
exclude = ["client/shroom_hook","client/shroom_ffi", "crates/game"]

# Shroom crates for now
[patch.crates-io]
shroom-net = { path = "/home/jonas/Dokumente/projects/shroom-net/crates/shroom-net" }
shroom-pkt = { path = "/home/jonas/Dokumente/projects/shroom-net/crates/shroom-pkt" }
shroom-srv = { path = "/home/jonas/Dokumente/projects/shroom-net/crates/shroom-srv" }
