[package]
name = "shroom_launchar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
anyhow = "1"
config = "0.13.3"
indicatif = "0.17"
memchr = "2"
self-replace = "1.3.5"
serde = { version = "1.0.183", features = ["derive"] }
shrooming = { version = "0.1", path = "../../server/shrooming" }
tokio = { version = "1", features = ["full"] }
# TODO publish this
tuf_update = { version = "0.1", path = "/home/jonas/Dokumente/projects/mupdate" }
