[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1"
array-init = "2"
arrayvec = "0.7"
async-trait = "0.1"
bcrypt = "0.15"
bincode = "1"
bitflags = "2"
chrono = "0.4"
constant_time_eq = "0.3"
dashmap = "5"
either = "1"
enum-map = "3.0.0-beta.1"
futures = "0.3"
geo = "0.26"
geo-svg = "0.5"
geo-types = { version = "0.7", features = ["rstar"] }
itertools = "0.11"
log = "0.4"
num_enum = "0.7"
ractor = "0.9"
rand = "0.8"
rstar = "0.11"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = { version = "0.7", features = ["time"] }
password-hash = "0.5"
argon2 = "0.5"
bytemuck = "1.13.1"
euclid = { version = "0.22", features = ["serde"] }
derive_more = "0.99"
smallvec = "1"
nom = "7"
serde_json = "1"
trackr = "0.1"
num = "0.4"
wasmtime = "14"
meta = { version = "0.1", path = "../../crates/meta" }
shroom-net = "0.4"
shroom-pkt = "0.1.1"
proto95 = { version = "0.1.0", path = "../../crates/proto95" }
plugins = { version = "0.1.0", path = "../plugins" }


[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng", "macro-diagnostics"]
