[package]
name = "login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
log = "0.4"
tokio = "1"
shroom-pkt = "0.1"
shroom-srv = "0.1"
shroom-net = "0.4"
data = { version = "0.1.0", path = "..//data" }
proto95 = { version = "0.1.0", path = "..//proto95" }
