[package]
name = "meta"
version = "0.1.0"
edition = "2021"

[lib]
name = "meta"
path = "src/lib.rs"

[[bin]]
name = "meta-gen"
path = "bin/gen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rayon = "1"
anyhow = "1.0.75"
bincode = "1.3.3"
geo = "0.26.0"
geo-svg = "0.5.0"
itertools = "0.11.0"
proto95 = { version = "0.1.0", path = "../proto95" }
rand = "0.8.5"
rstar = "0.11.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
pest = { version = "2.7.4" }
pest_derive = "2.7.4"
lazy_static = "1.4.0"
regress = "0.7.1"
either = { version = "1.9.0", features = ["serde"] }
