[package]
name = "mono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow =  { version = "1", features = ["backtrace"] }
array-init = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.13", features = ["toml"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = "1"
uuid = "1"
shroom-pkt = "0.1"
shroom-net = "0.4"
dotenv = "0.15"
warp = "0.3"
data = { version = "0.1.0", path = "../data" }
game = { version = "0.1", path = "../game" }
login = { version = "0.1", path = "../login" }
proto95 = { version = "0.1.0", path = "../proto95" }
meta = { version = "0.1", path = "../meta" }


[dependencies.openssl]
version = "0.10"
#features = [
#    "vendored"
#]