[package]
name = "plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.74"
pin-project = "1"
proto95 = { version = "0.1.0", path = "../proto95" }
tokio = { version = "1.33.0", features = ["full"] }
