[package]
name = "re_wz"
version = "0.1.0"
edition = "2021"

[features]
default = []
mmap = ["memmap2"]

[dependencies]
aes = "0.8"
anyhow = "1"
binary-layout = "3.2"
binrw = "0.11"
bytemuck = "1"
deflate = "1"
id_tree = "1.8"
image = "0.24"
itoa = "1"
flate2 = { version = "1", features = ["zlib"], default-features = false }
memmap2 = { version = "0.7", optional = true }
log = "0.4"
