[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
array-init = "2.1"
arrayvec = "0.7"
async-trait = "0.1"
bcrypt = "0.15"
bincode = "1.3"
bitflags = "2"
chrono = "0.4"
constant_time_eq = "0.3"
dashmap = "5"
either = "1"
enum-map = "2.6"
futures = "0.3"
game_data = { version = "0.1", path = "../../data/game_data" }
geo = "0.26"
geo-svg = "0.5"
geo-types = { version = "0.7", features = ["rstar"] }
itertools = "0.11"
log = "0.4"
num_enum = "0.7"
proto95 = { version = "0.1", path = "../proto95" }
ractor = "0.9"
rand = "0.8"
raqote = "0.8"
rstar = "0.11"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros" ]}
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
shroom_net_derive = "0.2.2"
shroom_net = "0.2"
password-hash = "0.5.0"
argon2 = "0.5.1"
bytemuck = "1.13.1"
euclid = "0.22.9"
tracker = "0.2.1"
derive_more = "0.99.17"

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

