[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1"
array-init = "2.1"
arrayvec = "0.7"
async-trait = "0.1"
bcrypt = "0.15"
bincode = "1.3"
bitflags = "2"
chrono = "0.4"
constant_time_eq = "0.3"
dashmap = "5"
either = "1"
enum-map = "2.6"
futures = "0.3"
game_data = { version = "0.1", path = "../../data/game_data" }
geo = "0.26"
geo-svg = "0.5"
geo-types = { version = "0.7", features = ["rstar"] }
itertools = "0.11"
log = "0.4"
num_enum = "0.7"
proto95 = { version = "0.1", path = "../proto95" }
ractor = "0.9"
rand = "0.8"
rstar = "0.11"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros" ]}
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util ={ version = "0.7", features = ["time"]}
shroom-pkt = "0.1.1"
shroom-net = "0.4"
password-hash = "0.5"
argon2 = "0.5"
bytemuck = "1.13.1"
euclid = "0.22.9"
tracker = "0.2.1"
derive_more = "0.99.17"
smallvec = "1.11.0"
nom = "7.1.3"
serde_json = "1"
evalexpr = { version = "11.1.0", features = ["serde"] }
trackr = "0.1"
num = "0.4.1"
wasmtime = "13.0.0"


[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

