[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1.4"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
dashmap = "5"
data = { version = "0.1", path = "../data" }
game_data = { version = "0.1", path = "../../data/game_data" }
log = "0.4"
proto95 = { version = "0.1", path = "../proto95" }
tokio = "1"
shroom_net_derive = "0.2.2"
shroom_net = "0.3"
