[package]
name = "mono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
array-init = "2"
async-trait = "0.1"
clap = { version = "4.3", features = ["derive"] }
config = { version = "0.13", features = ["toml"] }
data = { version = "0.1", path = "../data" }
game = { version = "0.1", path = "../game" }
log = "0.4"
login = { version = "0.1", path = "../login" }
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
shrooming = { version = "0.1", path = "../shrooming" }
tokio = "1"
uuid = "1"
shroom_net_derive = "0.2.2"
shroom_net = "0.3"
dotenv = "0.15"
proto95 = { version = "0.1.0", path = "../proto95" }
