[package]
name = "shrooming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
axum = { version = "0.6", features = ["headers"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
hyper = "0.14"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[build-dependencies]
tonic-build = "0.9"
